Semantic analysis working
Finished all visit... methods of the semantic analyzer